user-kubernetes/ingress-nginx/base-url-ingress-sources.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-url
  namespace: default
spec:
  rules:
  - host: www.chuan.com
    http:
      paths:
      - path: /www
        backend:
          serviceName: www-service
          servicePort: 80
      - path: /web
        backend:
          serviceName: web-service
          servicePort: 80
